# modelfuzz

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/modelfuzz/: cli.py  decorator.py
tests/: test_scan.py
