[project]
name = "modelfuzz"
version = "0.1.2"
description = "Runtime guardrails for AI agents."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Gagan Deep", email = "gagan.ping@gmail.com" },
]
keywords = ["ai-agents", "security", "guardrails", "prompt-injection", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
modelfuzz = "modelfuzz.cli:main"

[project.urls]
Homepage = "https://github.com/higagan/modelfuzz"
Repository = "https://github.com/higagan/modelfuzz"
Issues = "https://github.com/higagan/modelfuzz/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.12",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelfuzz"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
